--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -24,3 +24,10 @@ jobs:
 
     - name: Run tests
       run: npm test
+
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: Test/**/*.test.js
