--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -25,9 +25,9 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Upload test results
+    - name: Archive test results
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: Test/**/*.test.js
+        path: mochawesome-report/*.json
