Colocando relatorio visual

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -30,4 +30,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: mochawesome-report/*.json
+        path: mochawesome-report
