--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -29,5 +29,5 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: test-results
-        path: Test/**/*.test.js
+        name: mochawesome-report
+        path: mochawesome-report/mochawesome.html
