--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -29,7 +29,5 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
- Relatorios_Correção
-        name: mochawesome-report
-        path: mochawesome-report/mochawesome.html
-
+        name: test-results
+        path: mochawesome-report
