--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -25,9 +25,9 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Archive test results
+    - name: Upload test results
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: mochawesome-report
-        path: mochawesome-report/mochawesome.html
+        path: mochawesome-report/**/*.html
